<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Create by SangKwon on 2019. 10. 29.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/txt_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_stop"
            app:layout_constraintBottom_toTopOf="@id/btn_room"/>

    <Button
            android:id="@+id/btn_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btn_start"/>

    <Button
            android:id="@+id/btn_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_db"
            app:layout_constraintTop_toBottomOf="@id/btn_start"
            app:layout_constraintBottom_toTopOf="@id/btn_liveData"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
            android:id="@+id/btn_liveData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/live_data"
            app:layout_constraintTop_toBottomOf="@id/btn_room"
            app:layout_constraintBottom_toTopOf="@id/btn_retrofit"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
            android:id="@+id/btn_retrofit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrofit"
            app:layout_constraintTop_toBottomOf="@id/btn_liveData"
            app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>