<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Create by SangKwon on 2019. 11. 4.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/layout_margin"
        tools:context=".coroutine.CoroutineActivity">

    <Button
            android:id="@+id/btn_coroutine_time"
            android:text="@string/coroutine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="parent"/>

    <Button
            android:id="@+id/btn_coroutine_fun"
            android:text="@string/coroutine2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_coroutine_time"
            app:layout_constraintRight_toLeftOf="parent"/>

    <Button
            android:id="@+id/btn_coroutine_scope"
            android:text="@string/coroutine3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_coroutine_fun"
            app:layout_constraintRight_toLeftOf="parent"/>

    <Button
            android:id="@+id/btn_coroutine_polling"
            android:text="@string/coroutine4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_coroutine_scope"
            app:layout_constraintRight_toLeftOf="parent"/>

    <TextView
            android:id="@+id/txt_routine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_coroutine_polling"
            app:layout_constraintRight_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>