<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Create by SangKwon on 2019. 10. 29.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="activity" type="md.winitech.com.commonapi_x.room.RoomActivity"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".room.RoomActivity">


        <Button
                android:text="@string/insert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_insert" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="@{activity::onClickButton}"
                app:layout_constraintBottom_toTopOf="@+id/guideline" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline6" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/first_name"
                tools:layout_editor_absoluteY="26dp" android:id="@+id/edt_firstNM" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                tools:ignore="MissingConstraints"
                android:importantForAutofill="no" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:text="@string/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_firstNM"
                app:layout_constraintTop_toTopOf="@+id/guideline3" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline4"
                app:layout_constraintEnd_toStartOf="@+id/guideline5" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>

        <TextView
                android:text="@string/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_lastNM" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline4" app:layout_constraintEnd_toStartOf="@+id/guideline5"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline6"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/last_name"
                android:id="@+id/edt_lastNM" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline5" tools:ignore="MissingConstraints"
                android:importantForAutofill="no" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline4" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline6"/>

        <Button
                android:text="@string/select"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="@{activity::onClickButton}"
                android:id="@+id/btn_select" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline8"/>

        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@+id/guideline7"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="8dp"/>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/guideline"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.32"/>
        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/guideline3"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.02"/>
        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/guideline4"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.12"/>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/guideline5"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.3"/>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/guideline6"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.22"/>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/guideline7"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.45"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content" android:id="@+id/guideline8"
                                                    android:orientation="horizontal"
                                                    app:layout_constraintGuide_percent="0.42"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>